# electricity-analytics

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: bg_parser.py  ru_parser.py
