[tool.poetry]
name = "electricty-analytics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "electricty_analytics"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
altair = "^5.0.1"
pandas = "^2.0.3"
streamlit = "^1.25.0"
vega-datasets = "^0.9.0"
arrow = "^1.2.3"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
urllib3 = "^2.0.4"
plotly = "^5.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
